[package]
name = "memory-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.8", features = ["image_rs", "smol"] }
rfd = "0.11"
image = "0.24"
sysinfo = "0.28"

[dependencies.windows]
version = "0.48"
features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_System_SystemServices",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ToolHelp",
]